# ucmt

./: AGENTS.md  README.md  hello.py  pyproject.toml
.beads/: issues.jsonl
.githooks/: pre-commit
docs/: initial_plan.md
src/ucmt/: __init__.py  cli.py  client.py  config.py  exceptions.py  runner.py  state.py  types.py
src/ucmt/databricks/: __init__.py  client.py  utils.py
src/ucmt/migrations/: __init__.py  parser.py  runner.py  state.py
src/ucmt/schema/: __init__.py  codegen.py  diff.py  exporter.py  introspect.py  loader.py  models.py  validator.py
tests/: __init__.py  helpers.py  test_client.py
tests/fixtures/golden_sql/: add_phone_column.sql  create_test_table.sql
tests/fixtures/schema/tables/: transactions.yaml  users.yaml
tests/integration/: __init__.py  test_e2e_workflow.py  test_online_diff_flow.py
tests/unit/: __init__.py  test_cli.py  test_cli_tdd.py  test_codegen.py  test_config.py  test_databricks_state_store.py  test_databricks_utils.py  test_diff.py  test_exceptions.py  test_exporter.py  test_introspect.py  test_loader.py  test_migration_state.py  test_models.py  test_parser.py  test_runner.py  test_types.py  test_validator.py
