[project]
name = "ucmt"
version = "0.1.0"
description = "Unity Catalog Migration Tool - Declarative schema migrations for Databricks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "databricks-sql-connector>=3.0.0",
]

[project.scripts]
ucmt = "ucmt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ucmt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.9",
]
